--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Documentation
+name: Doxygen Documentation
 
 # Controls when the action will run. 
 on:
@@ -29,7 +29,7 @@ jobs:
         uses: mattnotmitt/doxygen-action@v1
         with:
           working-directory: './'
-          doxyfile-path: './Documentation/Doxygen'
+          doxyfile-path: 'Documentation/Doxygen'
           
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
