--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -1,10 +1,9 @@
 ﻿name: Analysis
 
 on:
-  push:
-  pull_request:
-  workflow_dispatch:
-    - inputs:
+  push: {}
+  pull_request: {}
+  workflow_dispatch: {}
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
