Fix solution file name

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -39,10 +39,10 @@ jobs:
           name: ${{ steps.getManualLicenseFile.outputs.filePath }}
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
 
-  build:
+  compile:
     needs: [checklicense]
     if: needs.checklicense.outputs.is_unity_license_set == 'true'
-    name: Compile under ${{ matrix.targetPlatform }}
+    name: Compile for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -61,15 +61,25 @@ jobs:
           key: build-Library-${{ matrix.targetPlatform }}
           restore-keys: |
             build-Library-
-
-      - uses: game-ci/unity-builder@v2
-        id: buildStep
-        with:
-          projectPath: ${{ env.PROJECT_PATH }}
-          targetPlatform: ${{ matrix.targetPlatform }}
-          buildMethod: Plugins.Editor.BuildUtilities.EmitProjectFiles
+            
+  analyze:
+    needs: [compile]
+    runs-on: ubuntu-latest
+    name: Run code analysis
+    steps:
+    - uses: game-ci/unity-builder@v2
+      id: buildStep
+      with:
+        projectPath: ${{ env.PROJECT_PATH }}
+        targetPlatform: ${{ matrix.targetPlatform }}
+        buildMethod: Plugins.Editor.BuildUtilities.EmitProjectFiles
         
-      - name: resharper
-        uses: glassechidna/resharper-action@master
-        with:
-          solution: ls ${{ env.PROJECT_PATH }} | grep ".sln$" | head -1 # find solution file name
+    - name: Get solution file name
+      id: solutionFileName
+      run:
+        echo "::set-output name=name::` ls $env.PROJECT_PATH | grep ".sln$" | head -1 `"
+      
+    - name: Run Resharper
+      uses: glassechidna/resharper-action@master
+      with:
+        solution: ${{ steps.solutionFileName.outputs.name }}
